--- a/package.json
+++ b/package.json
@@ -24,12 +24,17 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
+    "@prisma/client": "^6.11.0",
     "@thirdweb-dev/chains": "^0.1.120",
     "@thirdweb-dev/react": "^4.9.4",
     "@thirdweb-dev/sdk": "^4.0.99",
     "@thirdweb-dev/wallets": "^2.5.39",
     "next": "^15.3.4",
+    "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
     "pino-pretty": "^13.0.0",
+    "prisma": "^6.11.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
