add: wallet connection login thirdweb process

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "pino-pretty": "^13.0.0",
     "prisma": "^6.11.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "thirdweb": "^5.105.4"
   },
   "devDependencies": {
     "@types/node": "^24.0.4",
