--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@thirdweb-dev/react": "^4.9.4",
     "@thirdweb-dev/sdk": "^4.0.99",
     "@thirdweb-dev/wallets": "^2.5.39",
+    "ethers": "^5.8.0",
     "next": "^15.3.4",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
