--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
   "main": "next.config.js",
   "directories": {
     "lib": "lib"
@@ -20,6 +19,8 @@
   "scripts": {
     "dev": "next dev",
     "dev:fast": "next dev --port 3000",
+    "dev:turbo": "next dev --turbo",
+    "dev:clean": "rm -rf .next && NEXT_TELEMETRY_DISABLED=1 next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -33,7 +34,6 @@
     "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.11.1",
     "@tanstack/react-query": "^4.36.1",
-    "@thirdweb-dev/react": "^4.9.4",
     "axios": "^1.10.0",
     "ethers": "^5.8.0",
     "next": "^15.3.4",
@@ -50,6 +50,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "eslint": "^9.29.0",
+    "null-loader": "^4.0.1",
     "prettier": "^3.6.0",
     "tsx": "^4.20.4",
     "typescript": "^5.8.3"
