--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.11.1",
+    "@stripe/react-stripe-js": "^5.0.0",
+    "@stripe/stripe-js": "^8.0.0",
     "@tanstack/react-query": "^4.36.1",
     "axios": "^1.10.0",
     "ethers": "^5.8.0",
@@ -43,6 +45,7 @@
     "prisma": "^6.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "stripe": "^19.0.0",
     "thirdweb": "^5.105.37"
   },
   "devDependencies": {
