--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
     "db:seed": "tsx prisma/seed.ts",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "supabase:test": "tsx scripts/test-supabase-connection.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.11.1",
     "@stripe/react-stripe-js": "^5.0.0",
     "@stripe/stripe-js": "^8.0.0",
+    "@supabase/supabase-js": "^2.74.0",
     "@tanstack/react-query": "^4.36.1",
     "axios": "^1.10.0",
     "ethers": "^5.8.0",
