--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dev:turbo": "next dev --turbo",
     "dev:clean": "rm -rf .next && NEXT_TELEMETRY_DISABLED=1 next dev --turbo",
     "build": "next build",
-    "start": "next start",
+    "start": "next start --port 3005",
     "lint": "next lint",
     "test": "echo \"Error: no test specified\" && exit 1",
     "db:seed": "tsx prisma/seed.ts",
