--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
+    "@aws-sdk/client-s3": "^3.920.0",
+    "@aws-sdk/s3-request-presigner": "^3.920.0",
     "@google-cloud/pubsub": "^4.8.0",
     "@google-cloud/storage": "^7.12.1",
     "@prisma/client": "^6.11.1",
