--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "dev:fast": "next dev --port 3000",
     "dev:turbo": "next dev --turbo",
     "dev:clean": "rm -rf .next && NEXT_TELEMETRY_DISABLED=1 next dev --turbo",
-    "build": "next build",
+    "build": "NODE_OPTIONS=--max-old-space-size=4096 next build",
     "start": "next start --port 3005",
     "lint": "next lint",
     "test": "echo \"Error: no test specified\" && exit 1",
